# formula1

./: .gitignore  CNAME  README.md  go.work  go.work.sum  index.html  okteto-pipeline.yml
.github/workflows/: pr.yaml  push.yaml
assets/dioxus/: Formula 1 GraphQL Experiment.js  Formula 1 GraphQL Experiment_bg.wasm
assets/dioxus/snippets/dioxus-interpreter-js-603636eeca72cf05/: inline0.js
e2e/: go.mod  test.go
formulagraphql/: Dockerfile  go.mod  go.sum  gqlgen.yml  main.go  server.go
formulagraphql/graph/: helpers.go  resolver.go  schema.graphqls  schema.resolvers.go
formulagraphql/graph/model/: models_gen.go
formulagraphql/models/race/: race.go
formulagraphql/models/raceresults/: results.go
kustomize/: deployment.yaml  service.yaml
new_web/: .gitignore  Cargo.toml
new_web/graph/: query.graphql  schema.graphql
new_web/src/: constructors.rs  drivers.rs  footer.rs  main.rs
web/: .gitignore  Cargo.toml  Dioxus.toml  README.md  package.json
web/graph/: query.graphql
web/public/: tailwind.css
web/src/: App.vue  circuits.rs  constructors.rs  drivers.rs  footer.rs  home.rs  main.rs  main.ts
web/src/components/: Constructors.vue  Drivers.vue  Races.vue
web/src/router/: index.ts
web/src/views/: RacesView.vue
